// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scanEntityKeys > should deduplicate keys across iterations 1`] = `
[
  "key1",
  "key2",
  "key3",
]
`;

exports[`scanEntityKeys > should handle empty intermediate iterations 1`] = `
[
  "key1",
  "key2",
]
`;

exports[`scanEntityKeys > should loop through multiple scan iterations 1`] = `
[
  "key1",
  "key2",
  "key3",
  "key4",
]
`;

exports[`scanEntityKeys > should return empty array when no keys match 1`] = `[]`;

exports[`scanEntityKeys > should return keys from single scan iteration 1`] = `
[
  "key1",
  "key2",
  "key3",
]
`;
